# dotinstall

./: Cargo.toml  README.md
src/: cargo.rs  dirs.rs  lib.rs  package.rs  script.rs  symlinks.rs  util.rs
testing/ui/fail/: duplicate_symlink.rs  duplicate_symlink.stderr
testing/ui/pass/: example.rs
